--- a/lab_2/.vscode/settings.json
+++ b/lab_2/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "__locale": "cpp",
+        "istream": "cpp"
     }
 }
