--- a/lab_2/.vscode/settings.json
+++ b/lab_2/.vscode/settings.json
@@ -3,6 +3,9 @@
         "iostream": "cpp",
         "string": "cpp",
         "__locale": "cpp",
-        "istream": "cpp"
+        "istream": "cpp",
+        "limits": "cpp",
+        "ios": "cpp",
+        "typeinfo": "cpp"
     }
 }
